Change audio generation to parallel streams, apply retry for Too many Requests Error